@@ -1,0 +1,3 @@
+Download shjs from:
+
+http://sourceforge.net/projects/shjs/files/
